[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://Scene/show_text/choose_scene.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bev7kks843amc" path="res://Art/BackPack/117.png" id="2"]
[ext_resource type="FontFile" uid="uid://ond0o3n8a00i" path="res://Font/华康宋体W3.ttc" id="3"]
[ext_resource type="Texture2D" uid="uid://jat82rbpqkuk" path="res://Art/BackPack/124.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dpbow60dxo1ky" path="res://Art/BackPack/126.png" id="5"]
[ext_resource type="FontFile" uid="uid://mq0cfa3t1vbr" path="res://Font/8_FZCuYuan-M03S.ttf" id="6"]
[ext_resource type="Texture2D" uid="uid://bgr3nkkt8l0xs" path="res://Art/BackPack/119.png" id="7"]
[ext_resource type="Texture2D" uid="uid://clcr2i0a0unil" path="res://Art/BackPack/121.png" id="8"]

[node name="choose_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = -1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( "1" )
metadata/_edit_lock_ = true

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 938.0
offset_bottom = 588.0
color = Color(0, 0, 0, 0.607843)
metadata/_edit_lock_ = true

[node name="bg" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -93.0
offset_right = 176.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( "2" )

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/bg"]
layout_mode = 0
offset_left = 25.0
offset_top = 39.0
offset_right = 321.0
offset_bottom = 132.0
horizontal_scroll_mode = 0

[node name="Text" type="Label" parent="TextureRect/bg/ScrollContainer"]
texture_filter = 2
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 17
vertical_alignment = 1
autowrap_mode = 1
metadata/_edit_lock_ = true

[node name="qx" type="TextureButton" parent="TextureRect/bg"]
layout_mode = 0
offset_left = 206.0
offset_top = 149.0
offset_right = 274.0
offset_bottom = 182.0
scale = Vector2(1.45, 1.45)
focus_mode = 0
texture_normal = ExtResource( "4" )
texture_pressed = ExtResource( "4" )
texture_hover = ExtResource( "5" )
texture_disabled = ExtResource( "4" )

[node name="calm" type="Label" parent="TextureRect/bg/qx"]
layout_mode = 0
offset_left = -59.2413
offset_top = 6.0
offset_right = -32.2413
offset_bottom = 29.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="qd" type="TextureButton" parent="TextureRect/bg"]
layout_mode = 0
offset_left = 25.0
offset_top = 149.0
offset_right = 93.0
offset_bottom = 182.0
scale = Vector2(1.45, 1.45)
focus_mode = 0
disabled = true
texture_normal = ExtResource( "7" )
texture_pressed = ExtResource( "7" )
texture_hover = ExtResource( "8" )
texture_disabled = ExtResource( "7" )
metadata/_edit_lock_ = true

[node name="think_time" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="TextureRect/bg/qx" to="." method="_on_qx_pressed" flags=18]
[connection signal="pressed" from="TextureRect/bg/qd" to="." method="_on_qd_pressed" flags=18]
[connection signal="timeout" from="think_time" to="." method="_on_think_time_timeout" flags=18]
